# forceatlas2

./: .gitignore  404.html  CLAUDE.md  MANIFEST.in  README.md  README.rst  index.html  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  python-publish.yml
advanced/: index.html
algorithm/: index.html
api/cli/: index.html
api/easy/: index.html
api/fa2util/: index.html
api/forceatlas2/: index.html
api/mcp/: index.html
api/metrics/: index.html
api/vectorized/: index.html
api/viz/: index.html
docs/: advanced.md  algorithm.md  getting-started.md  index.md  llms.txt
docs/api/: cli.md  easy.md  fa2util.md  forceatlas2.md  mcp.md  metrics.md  vectorized.md  viz.md
examples/: forceatlas2-layout.ipynb
fa2/: __init__.py  __main__.py  easy.py  fa2util.c  fa2util.pxd  fa2util.py  fa2util.pyx  fa2util_vectorized.py  forceatlas2.py  mcp_server.py  metrics.py  viz.py
fa2_modified/: fa2util.pxd  forceatlas2.py
getting-started/: index.html
search/: search_index.json
tests/: conftest.py  test_benchmark.py  test_cli.py  test_easy.py  test_fa2util.py  test_forceatlas2.py  test_mcp.py  test_metrics.py  test_vectorized.py  test_viz.py
